crates/parsing/tests/snapshots/grammar_tests__qualified-upper-name.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: Hello.As
Start { kind: ConstructorExpression }
  Start { kind: QualifiedName }
    Start { kind: QualifiedPrefix }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
      Token { kind: Period }
    Finish
    Start { kind: NameRef }
      Token { kind: Upper }
    Finish
  Finish
Finish

