crates/parsing/tests/snapshots/grammar_tests__string-binder.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: "hi!"
Start { kind: LiteralBinder }
  Token { kind: LiteralString }
Finish

