crates/parsing/tests/snapshots/grammar_tests__ternary-in-do.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: 
do
  if a
  then b
  else c

Start { kind: DoExpression }
  Start { kind: QualifiedDo }
    Token { kind: DoKw }
  Finish
  Start { kind: OneOrMore }
    Start { kind: DoDiscard }
      Start { kind: IfThenElseExpression }
        Token { kind: IfKw }
        Start { kind: VariableExpression }
          Start { kind: QualifiedName }
            Start { kind: NameRef }
              Token { kind: Lower }
            Finish
          Finish
        Finish
        Token { kind: ThenKw }
        Start { kind: VariableExpression }
          Start { kind: QualifiedName }
            Start { kind: NameRef }
              Token { kind: Lower }
            Finish
          Finish
        Finish
        Token { kind: ElseKw }
        Start { kind: VariableExpression }
          Start { kind: QualifiedName }
            Start { kind: NameRef }
              Token { kind: Lower }
            Finish
          Finish
        Finish
      Finish
    Finish
  Finish
Finish

