crates/parsing/tests/snapshots/grammar_tests__test_export_list_empty.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: 
Start { kind: ExportList }
Finish

