crates/parsing/tests/snapshots/grammar_tests__test_export_list_only_brace.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: ( )
Start { kind: ExportList }
  Token { kind: LeftParenthesis }
  Token { kind: RightParenthesis }
Finish

