crates/parsing/tests/snapshots/grammar_tests__tick-expression-operator-name.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: a `(+)` b
Start { kind: InfixChain }
  Start { kind: VariableExpression }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
  Finish
  Start { kind: OneOrMore }
    Start { kind: Pair }
      Start { kind: Wrapped }
        Token { kind: Tick }
        Start { kind: OperatorNameExpression }
          Start { kind: Wrapped }
            Token { kind: LeftParenthesis }
            Start { kind: NameRef }
              Token { kind: Operator }
            Finish
            Token { kind: RightParenthesis }
          Finish
        Finish
        Token { kind: Tick }
      Finish
      Start { kind: VariableExpression }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Lower }
          Finish
        Finish
      Finish
    Finish
  Finish
Finish

