crates/parsing/tests/snapshots/grammar_tests__true-binder.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: true
Start { kind: LiteralBinder }
  Token { kind: LiteralTrue }
Finish

